tests/errors/break_in_ordinary_function_in_block.dang
# An ordinary nested function must not inherit the enclosing block call's break target
let result = [1].map { x =>
  let bad: Int! {
    break "done"
  }
  x
}
